Made button widths more responsive on smaller screens and fixed a red button text issue from a duplicated class.

--- a/handlers/Home/styles.css
+++ b/handlers/Home/styles.css
@@ -5,12 +5,6 @@
 
 }
 
-/* temp coloring for selected option in drawer */
-.selected {
-  color: red;
-}
-
-
 /* other */
 #app {
 	width: 100%;
